charts/apps/monitoring/jaeger/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - host: jaeger.svc.m00nlit.dev
      http:
        paths:
          - backend:
              service:
                name: jaeger-collector
                port:
                  name: jaeger
            path: /
            pathType: Prefix
